- Styling: fixed media element dark mode styling for play rows for v2.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -22310,6 +22310,31 @@ iframe.email-body {
   border-bottom: none;
 }
 
+.individual-play-row .individual-play-date,
+.individual-play-row .individual-play-person-location {
+  color: var(--color-interface-medium);
+}
+
+.individual-play-person-detail {
+  color: var(--color-interface-soft);
+}
+
+.individual-play-row .individual-play-bar {
+  background-color: var(--color-interface-softer);
+  border: var(--color-interface-soft) 1px solid;
+}
+
+.individual-play-row .individual-play-chart {
+  background: var(--color-interface-soft);
+}
+
+.individual-play-interaction {
+  background: var(--color-interface-softest);
+}
+.individual-play-interaction .individual-play-interaction-session {
+  color: var(--color-interface-strong);
+}
+
 .actions.assetmanager-actions {
   margin-bottom: var(--spacing-xsmall);
 }
